# aenv

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL_FROM_BINARY.md  LICENSE  README.md  RELEASING.md  SECURITY.md  clippy.toml  rustfmt.toml
crates/aenv-cli/: Cargo.toml
crates/aenv-cli/src/: lib.rs  main.rs  paths.rs
crates/aenv-cli/src/cmd/: activate.rs  activate_if_needed.rs  adapter.rs  cache.rs  create.rs  deactivate.rs  delete.rs  diff.rs  doctor.rs  fork.rs  get.rs  init_shell.rs  list.rs  mod.rs  restore.rs  set.rs  snapshot.rs  status.rs  unpin.rs  use_.rs  vendor.rs  which.rs
crates/aenv-cli/src/cmd/global/: activate.rs  approval.rs  deactivate.rs  diff.rs  doctor.rs  import.rs  list.rs  mod.rs  new.rs  snapshot.rs  status.rs  use_.rs  which.rs
crates/aenv-cli/src/cmd/skill/: import.rs  import_all.rs  list.rs  mod.rs  new.rs  remove.rs
crates/aenv-cli/src/shell/: bash.sh  fish.sh  zsh.sh
crates/aenv-cli/tests/: cli_e2e.rs  composition_e2e.rs  create_adapter_e2e.rs  deactivate_prune_e2e.rs  diff_e2e.rs  doctor_e2e.rs  get_e2e.rs  global_activate_e2e.rs  global_doctor_e2e.rs  global_full_cycle_e2e.rs  global_import_e2e.rs  global_import_git_e2e.rs  global_new_e2e.rs  global_orphan_stash_e2e.rs  global_readonly_e2e.rs  global_snapshot_e2e.rs  global_status_e2e.rs  global_use_e2e.rs  lifecycle_claude_ctrl_real.rs  lifecycle_mini_fixture.rs  parameters_policies_e2e.rs  scripted_comparison_e2e.rs  set_e2e.rs  shared_files_e2e.rs  shared_flag_e2e.rs  shell_hook_e2e.rs  skill_import_all_e2e.rs  skill_import_git_e2e.rs  skill_import_local_e2e.rs  skill_list_e2e.rs  skill_new_e2e.rs  skill_remove_e2e.rs  skill_user_scope_e2e.rs  skills_lifecycle_e2e.rs  snapshot_e2e.rs  status_json_e2e.rs  status_skills_section.rs  status_unit.rs  status_with_params.rs  unified_scope_flags_e2e.rs  (+4 more)
crates/aenv-core/: Cargo.toml
crates/aenv-core/src/: activate.rs  adapter.rs  atomicity.rs  deactivate.rs  diff.rs  doctor.rs  error.rs  fs.rs  global_lock.rs  global_snapshot.rs  hash.rs  home.rs  identity.rs  jcs.rs  lib.rs  manifest.rs  materialize.rs  namespace.rs  parameters.rs  policies.rs  preflight.rs  project.rs  resolve.rs  restore.rs  scope.rs  shadow.rs  state.rs  strategy.rs
crates/aenv-core/src/activate/: lifecycle.rs  mod.rs  phase1.rs
crates/aenv-core/src/adapters_builtin/: aider.toml  claude_code.toml  cline.toml  codex.toml  continue_.toml  cursor.toml  mcp.toml  mod.rs  windsurf.toml
crates/aenv-core/src/fs/: mock.rs  mod.rs
crates/aenv-core/src/json/: adapter.rs  diff.rs  doctor.rs  get.rs  list.rs  mod.rs  skill.rs  status.rs  which.rs
crates/aenv-core/src/merge/: deep_json.rs  deep_toml.rs  deep_yaml.rs  mod.rs  section.rs
crates/aenv-core/src/namespaces_builtin/: mod.rs
crates/aenv-core/src/namespaces_builtin/blank/: CLAUDE.md  aenv.toml
crates/aenv-core/src/namespaces_builtin/cherny/: aenv.toml
crates/aenv-core/src/namespaces_builtin/karpathy/: aenv.toml
crates/aenv-core/src/policies/: mod.rs
crates/aenv-core/src/policies/builtin/: forbid_paths.rs  instructions_max_chars.rs  mcp_requires_command_or_url.rs  mod.rs  skill_requires_description.rs
crates/aenv-core/src/skills/: cache.rs  git.rs  git_source.rs  local.rs  mod.rs  registry.rs  source.rs
crates/aenv-core/tests/: activate.rs  activate_authored_skill.rs  activate_enforce.rs  activate_global_unit.rs  activate_imported_skill_local.rs  activate_required_skill_missing.rs  adapter.rs  adapter_parameter_decls.rs  adapter_soft_limits.rs  adapters_builtin.rs  atomicity.rs  composition.rs  cross_machine_hash.rs  deactivate.rs  deactivate_global_unit.rs  diff_project_drift.rs  diff_structural.rs  doctor.rs  doctor_auto_instructions_limit.rs  doctor_copy_drift.rs  doctor_instructions_budget_narrows.rs  doctor_user_scope.rs  error_exit_codes.rs  fork.rs  global_import_unit.rs  global_lock.rs  global_scaffold_unit.rs  global_snapshot_symlink_dirs.rs  global_snapshot_unit.rs  hash_basic.rs  hash_properties.rs  hash_user_scope.rs  hash_versioning.rs  home.rs  identity.rs  jcs_vectors.rs  json_shapes_compile.rs  json_snapshots.rs  lifecycle_activate.rs  lifecycle_deactivate.rs  (+48 more)
crates/aenv-core/tests/fixtures/cross_machine/: README.md  expected.txt
crates/aenv-core/tests/fixtures/cross_machine/alpha/: CLAUDE.md  aenv.toml
crates/aenv-core/tests/fixtures/cross_machine/beta/: CLAUDE.md  aenv.toml
crates/aenv-core/tests/fixtures/cross_machine/delta/: CLAUDE.md  aenv.toml
crates/aenv-core/tests/fixtures/cross_machine/gamma/: .mcp.json  aenv.toml
crates/aenv-core/tests/fixtures/cross_machine/gamma_base/: .mcp.json  aenv.toml
crates/aenv-core/tests/snapshots/: json_snapshots__adapter_entry_json_via_builder.snap  json_snapshots__adapter_entry_shape_is_stable.snap  json_snapshots__doctor_report_shape_is_stable.snap  json_snapshots__doctor_report_via_builder.snap  json_snapshots__drift_report_shape_is_stable.snap  json_snapshots__drift_report_via_builder.snap  json_snapshots__get_report_shape_is_stable.snap  json_snapshots__get_report_via_builder.snap  json_snapshots__list_entry_shape_is_stable.snap  json_snapshots__list_entry_via_builder.snap  json_snapshots__skill_entry_omits_adapter_when_none.snap  json_snapshots__skill_entry_shape_is_stable.snap  json_snapshots__skill_entry_via_builder.snap  json_snapshots__status_report_shape_is_stable.snap  json_snapshots__status_report_unpinned_via_builder.snap  json_snapshots__status_report_via_builder.snap  json_snapshots__structural_diff_shape_is_stable.snap  json_snapshots__structural_diff_via_builder.snap  json_snapshots__which_report_shape_is_stable.snap  json_snapshots__which_report_via_builder.snap
crates/aenv-rescue/: Cargo.toml
crates/aenv-rescue/src/: main.rs
crates/aenv-rescue/tests/: rescue_e2e.rs
pm_docs/: README.md  aenv-engineering.md  aenv-prd.md  (+10 more)
(+26 files in other folders)
