[workspace]
resolver = "2"
members = ["crates/aenv-core", "crates/aenv-cli"]

[workspace.package]
version = "0.0.1"
edition = "2021"
# MSRV: workspace deps (clap 4.5, thiserror 1, serde 1, toml 0.8) all
# comfortably support 1.79. Bump if a dep upgrade requires it; do not bump
# without a CI MSRV job to verify the new floor.
rust-version = "1.79"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blevene/aenv"
authors = ["aenv contributors"]

[workspace.dependencies]
# Runtime
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Dev
tempfile = "3.10"
insta = { version = "1.39", features = ["json"] }
proptest = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
