[workspace]
resolver = "2"
members = ["crates/aenv-core", "crates/aenv-cli"]

[workspace.package]
version = "0.0.1"
edition = "2021"
# MSRV: clap_lex 1.1.0 (a transitive dep of clap 4.5) uses Cargo edition
# 2024, which requires Cargo 1.85+. The MSRV CI job (`cargo +1.85.0 check`)
# catches floor regressions. Do not bump without re-running that job.
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blevene/aenv"
authors = ["aenv contributors"]

[workspace.dependencies]
# Runtime
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
pulldown-cmark = { version = "0.10", default-features = false }

# Dev
tempfile = "3.10"
insta = { version = "1.39", features = ["json"] }
proptest = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
