[package]
name = "aenv-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for aenv."

[[bin]]
name = "aenv"
path = "src/main.rs"

[dependencies]
aenv-core = { path = "../aenv-core" }
clap = { workspace = true }
# thiserror lands when the CLI layer starts mapping AenvError to formatted
# user output in Phase 1. Until then, keep deps lean.
